--- a/Android Call Recorder/res/values/strings.xml
+++ b/Android Call Recorder/res/values/strings.xml
@@ -27,4 +27,6 @@
 	<string name="about_close_button">Close</string>
 	<string name="send_mail">Send Mail</string>
 	<string name="withheld_number">Withheld Number</string>
+	<string name="menu_record_is_now_enabled">The application is enable to record calls</string>
+	<string name="menu_record_is_now_disabled">The application is not enable to record calls</string>
 </resources>
