--- a/Android Call Recorder/res/values-iw/strings.xml
+++ b/Android Call Recorder/res/values-iw/strings.xml
@@ -27,4 +27,7 @@
 	<string name="about_close_button">סגור</string>
 	<string name="send_mail">שלח דואר</string>
 	<string name="withheld_number">מספר חסוי</string>
+	<string name="menu_record_is_now_enabled">אפליקציה זאת מסוגלת עכשיו להקליט שיחות</string>
+	<string name="menu_record_is_now_disabled">אפליקציה זאת אינה מסוגלת עכשיו להקליט שיחות</string>
+	<string name="no_records_message">אין קבצי הקלטות במכשיר זה.\nעל מנת לאפשר הקלטות פתח את התפריט הראשי ובחר \"אפשר הקלטה\" לאחר מכן האפליצקציה צהיה מסוגלת להקליט את כל השיחות היוצאות והנכנסות.</string>
 </resources>
