--- a/Android Call Recorder/res/values-de/strings.xml
+++ b/Android Call Recorder/res/values-de/strings.xml
@@ -30,4 +30,8 @@
 	   <string name="menu_record_is_now_enabled">Die Anwendung wird jetzt ermöglichen, Anrufe aufzeichnen</string>
 	   <string name="menu_record_is_now_disabled">Die Anwendung ist nun nicht zu ermöglichen, Anrufe aufzeichnen</string>
 	   <string name="no_records_message">Es gibt keine Aufnahmen in diesem Telefon.\nDamit Rekord Möglichkeit das Hauptmenü zu öffnen, und wählen Sie \"Enable Rekord\".\nDanach wird die Anwendung erfassen alle ankommenden und abgehenden Anrufe.</string>
+	   <string name="radio_Enable_record">Aktivieren Rekord</string>
+	<string name="radio_Disable_record">Deaktivieren Rekord</string>
+	<string name="textview_startup">Bitte wählen Sie, wenn die Anwendung Ihre Anrufe aufgezeichnet werden sollen.\nSie können sich jederzeit ändern Sie Ihre Wahl durch Drücken der Android Menü-Taste.</string>
+	<string name="dialog_welcome_screen">Willkommens-Bildschirm</string>
 </resources>
