--- a/Android Call Recorder/res/values-es/strings.xml
+++ b/Android Call Recorder/res/values-es/strings.xml
@@ -41,5 +41,10 @@
     <string name="dialog_terms">Terms of use</string>
     <string name="dialog_privacy">Política de privacidad</string>
     <string name="dialog_privacy_terms">Por favor, haga clic en los botones de abajo para ver las condiciones de uso y política de privacidad</string>
+    <string name="menu_delete_all">Eliminar todas las grabaciones</string>
+    <string name="dialog_delete_all_title">Mensaje de alerta</string>
+    <string name="dialog_delete_all_content">Está seguro de que desea eliminar todas las grabaciones?</string>
+    <string name="dialog_delete_all_yes">Sí</string>
+    <string name="dialog_delete_all_no">No</string>
 </resources>
  
