--- a/Android Call Recorder/res/values-he/strings.xml
+++ b/Android Call Recorder/res/values-he/strings.xml
@@ -43,7 +43,7 @@
     <string name="dialog_privacy_terms">אנא לחץ על הכפתורים למטה כדי לראות את תנאי שימוש ומדיניות פרטיות</string>
     <string name="menu_delete_all">מחק את כל ההקלטות</string>
     <string name="dialog_delete_all_title">מסך התראה</string>
-    <string name="dialog_delete_all_content">האם אתה בטוח שברצונך למחוק את כל ההקלטות</string>
+    <string name="dialog_delete_all_content">האם אתה בטוח שברצונך למחוק את כל ההקלטות?</string>
     <string name="dialog_delete_all_yes">כן</string>
     <string name="dialog_delete_all_no">לא</string>
 </resources>
