--- a/Android Call Recorder/res/values-de/strings.xml
+++ b/Android Call Recorder/res/values-de/strings.xml
@@ -46,4 +46,7 @@
     <string name="dialog_delete_all_content">Sind Sie sicher, dass Sie alle Ihre Aufnahmen löschen?</string>
     <string name="dialog_delete_all_yes">Ja</string>
     <string name="dialog_delete_all_no">Keine</string>
+    <string name="notification_ticker">Aufnahme beginnt jetzt</string>
+	<string name="notification_title">Das Telefon ist nun das Gespräch aufzeichnen</string>
+	<string name="notification_text">Das Telefon wird die Aufnahme zu beenden, wenn das Gespräch wird beendet</string>
 </resources>
