--- a/Android Call Recorder/res/values-fr/strings.xml
+++ b/Android Call Recorder/res/values-fr/strings.xml
@@ -49,4 +49,5 @@
     <string name="notification_ticker">L\'enregistrement commence maintenant</string>
 	<string name="notification_title">Le téléphone enregistre actuellement la conversation</string>
 	<string name="notification_text">Le téléphone arrête l\'enregistrement quand la conversation prend fin</string>
+	<string name="record_impossible">Malheureusement, il n\'est pas possible d\'enregistrer les appels dans ce dispositif.</string>
 </resources>
