--- a/Android Call Recorder/res/values-it/strings.xml
+++ b/Android Call Recorder/res/values-it/strings.xml
@@ -49,4 +49,5 @@
     <string name="notification_ticker">La registrazione è ora di iniziare</string>
 	<string name="notification_title">Il telefono è ora registrando la conversazione</string>
 	<string name="notification_text">Il telefono si ferma la registrazione quando la conversazione si concluderà</string>
+	<string name="record_impossible">Purtroppo, non è possibile registrare le chiamate in questo dispositivo.</string>
 </resources>
