--- a/Android Call Recorder/res/values/strings.xml
+++ b/Android Call Recorder/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <string name="app_name">Call recorder for Android</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_Enable_record">Enable Record</string>
@@ -49,5 +48,5 @@
     <string name="notification_ticker">Recording is now Starting</string>
 	<string name="notification_title">The phone is now recording the conversation</string>
 	<string name="notification_text">The phone will stop the recording when the conversation will end</string>
-	<string name="record_impossible">Unfortunately, it is not possible to record calls in this device.</string>
+	<string name="record_impossible">Unfortunately, it is not possible to record calls in this device. (Usually because another application/service is using the microphone in the background)</string>
 </resources>
