Adjusted EN and ES translations Changed recording item options order to have delete as the last one Fixed mime type in play and email functionality Removed unneeded files from bin directory

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,18 +11,18 @@
 	<string name="list_erase_your_recordeed_call">erase your recorded call</string>
 	<string name="reciever_start_call">Start record call</string>
 	<string name="reciever_end_call">End Record call</string>
-	<string name="confirm_delete_title">Alert Dialog</string>
+	<string name="confirm_delete_title">Call deletion</string>
 	<string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
 	<string name="confirm_delete_yes">yes</string>
 	<string name="confirm_delete_no">no</string>
-	<string name="options_title">Options Title</string>
+	<string name="options_title">Recording options</string>
 	<string name="options_delete">Delete</string>
 	<string name="confirm_play">Play</string>
 	<string name="confirm_send">Send</string>
 	<string name="sendMail_subject">Your record from your phone</string>
 	<string name="sendMail_body">This is a call record from your phone</string>
 	<string name="about_title">About</string>
-	<string name="about_content">Call recorder by Kobi Krasnoff</string>
+	<string name="about_content">Call recorder by Kobi Krasnoff and Raul Robledo</string>
 	<string name="about_close_button">Close</string>
 	<string name="send_mail">Send Mail</string>
 	<string name="withheld_number">Withheld Number</string>
@@ -35,13 +35,13 @@
 	<string name="dialog_welcome_screen">Welcome Screen</string>
 	<string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
     <string name="dialog_close">Close</string>
-    <string name="menu_terms">terms of use</string>
+    <string name="menu_terms">Terms of use</string>
     <string name="menu_privacy_policy">Privacy Policy</string>
     <string name="dialog_terms">Terms of use</string>
     <string name="dialog_privacy">Privacy Policy</string>
     <string name="dialog_privacy_terms">Please click the buttons below to see the terms of use and privacy policy</string>
     <string name="menu_delete_all">Delete All recordings</string>
-    <string name="dialog_delete_all_title">Alert Message</string>
+    <string name="dialog_delete_all_title">Delete everything?</string>
     <string name="dialog_delete_all_content">Are you sure you want to delete all of your recordings?</string>
     <string name="dialog_delete_all_yes">Yes</string>
     <string name="dialog_delete_all_no">No</string>
